--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                 <img src="./facebook-app-symbol.png" alt="">
                 <img src="./twitter.png" alt="">
                 <img src="./linkedin.png" alt="">
+                <a href="https://www.igoraza.com/">
+                    <img src="./globewhite.png" alt="">
+                </a>
             </div>
         </div>
         <div>
