--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 Get Started
             </button>
         </div>
-        <img src="./heroimage.png" alt="">
+        <img src="./images/heroimage.png" alt="">
     </div>
     <div class="company">
         <div class="trust">
             <h2>1.6 k</h2>
             <p>Trusted<br> companies</p>
         </div>
-        <img src="./companies.png" alt="">
+        <img src="./images/companies.png" alt="">
     </div>
 
     <div class="servicetitle">
@@ -57,21 +57,21 @@
     <div class="servicecont">
         <div class="service">
             <div class="whitediv">
-                <img src="./shopping-cart.png" alt="">
+                <img src="./images/shopping-cart.png" alt="">
             </div>
             <p></p>
             <p>Shop in 50+ countries</p>
         </div>
         <div class="service">
             <div class="whitediv">
-                <img src="./credit-card.png" alt="">
+                <img src="./images/credit-card.png" alt="">
             </div>
             <p></p>
             <p>Safe and secure payements</p>
         </div>
         <div class="service">
             <div class="whitediv">
-                <img src="./call-center.png" alt="">
+                <img src="./images/call-center.png" alt="">
             </div>
             <p></p>
             <p>24/7 customer support</p>
@@ -82,7 +82,7 @@
 
     <div class="whychooseus">
         <div class="chooseleft">
-            <img src="./socialcircle.png" alt="">
+            <img src="./images/socialcircle.png" alt="">
         </div>
         <div class="apply">
             <p>One click install into any website</p>
@@ -105,9 +105,9 @@
         <h2>Discover Gift cards</h2>
     </div>
     <div class="giftcards">
-        <img src="./bluecard.png" alt="">
-        <img src="./yellowcard.png" alt="">
-        <img src="./blackcard.png" alt="">
+        <img src="./images/bluecard.png" alt="">
+        <img src="./images/yellowcard.png" alt="">
+        <img src="./images/blackcard.png" alt="">
     </div>
 
 
@@ -121,7 +121,7 @@
                 Get Started
             </button>
         </div>
-        <img src="./instantemail.png" alt="">
+        <img src="./images/instantemail.png" alt="">
     </div>
 
     <div class="servicetitle margint139">
@@ -130,7 +130,7 @@
     </div>
 
     <div class="acceptgift">
-        <img src="./acceptgift.png" alt="">
+        <img src="./images/acceptgift.png" alt="">
     </div>
 
     <div class="servicetitle">
@@ -139,7 +139,7 @@
 
     <div class="whychooseus">
         <div class="chooseleft">
-            <img src="./client.png" style="min-width: 300px;" alt="">
+            <img src="./images/client.png" style="min-width: 300px;" alt="">
         </div>
         <div class="apply">
             <p style="color: white;">One click install into any website</p>
@@ -166,18 +166,18 @@
 
     <div class="footer">
         <div class="clogo">
-            <img src="./Primary White.png" alt="">
+            <img src="./images/Primary White.png" alt="">
             <p>Start with something simple and small, <br>
                 then expand over time</p>
         </div>
         <div>
             <p>Social Links</p>
             <div class="icons">
-                <img src="./facebook-app-symbol.png" alt="">
-                <img src="./twitter.png" alt="">
-                <img src="./linkedin.png" alt="">
+                <img src="./images/facebook-app-symbol.png" alt="">
+                <img src="./images/twitter.png" alt="">
+                <img src="./images/linkedin.png" alt="">
                 <a href="https://www.igoraza.com/">
-                    <img src="./globewhite.png" alt="">
+                    <img src="./images/globewhite.png" alt="">
                 </a>
             </div>
         </div>
@@ -206,13 +206,6 @@
         <p>ⒸCopyright & All Rights Reserved 2023 <a href="https://www.igoraza.com/">@IGORAZA.</a> Designed By IGORAZA
         </p>
     </div>
-
-
-
-
-
-
-
 
 
 </body>
